--- a/posapp/templates/posapp/ItemList.html
+++ b/posapp/templates/posapp/ItemList.html
@@ -1,48 +1,37 @@
 {% extends "posapp/base.html" %}
 {% load static %}
 
-
-
-{%block content %}
-
+{% block content %}
 {% block styles %}
-<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> -->
-
 <style>
+    table {
+        margin: auto;
+        width: 50% !important;
+    }
 
-table {
-    margin: auto;
-    width: 50% !important; 
-}
+    .button-container {
+        text-align: right;
+        width: 75%;
+    }
 
-.button-container {
-    /*display: inline-block;*/
-    text-align: right;
-    width: 75%;
-}
-
-.header {
-    text-align: center;
-    margin-top:1rem;
-    margin-bottom:3rem;
-}
-
+    .header {
+        text-align: center;
+        margin-top: 1rem;
+        margin-bottom: 3rem;
+    }
 </style>
-
 {% endblock %}
 
 <h1 class="header">Item List</h1>
-
 
 <div class="button-container">
     <a type="button" class="btn btn-danger" href="{% url 'posapp:posapp' %}">Back</a>
     <a type="button" class="btn btn-primary" href="{% url 'posapp:item_add' %}">Add Item</a>
 </div>
 
-<div  class="table-container">
-    
-    <table class = "table table-borderless table-striped table-hover">
-        <thead class= "border-bottom font-weight-bold">
+<div class="table-container">
+    <table class="table table-borderless table-striped table-hover">
+        <thead class="border-bottom font-weight-bold">
             <tr>
                 <th>Item Name</th>
                 <th>Item Quantity</th>
@@ -54,11 +43,11 @@ table {
         <tbody>
             {% for i in items %}
             <tr>
-                <td data-heading="Item Name">{{i.item_name}}</td>
-                <td data-heading="Item Quantity">{{i.stock_quantity}}</td>
-                <td data-heading="Item Price">{{i.item_price}}</td>
+                <td data-heading="Item Name">{{ i.item_name }}</td>
+                <td data-heading="Item Quantity">{{ i.stock_quantity }}</td>
+                <td data-heading="Item Price">{{ i.item_price }}</td>
                 <td data-heading="Edit Item">
-                    <a class="" href="{% url 'posapp:item_update' i.id %}">Edit</a>
+                    <a class="" href="{% url 'posapp:item_update' %}">Edit</a>
                 </td>
                 <td data-heading="Delete Item">
                     {% csrf_token %}
@@ -67,10 +56,6 @@ table {
             </tr>
             {% endfor %}
         </tbody>
-    
     </table>
-
-
 </div>
-
 {% endblock content %}
